# supayload

.github/workflows/: android-build.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/nubra/karina/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/update/: config.js  installing.html  update.html
app/src/main/cpp/: CMakeLists.txt  installer.cpp
app/src/main/java/com/example/installer/: FirebaseHelper.java  MainActivity.java  MainActivity.kt  NativeInstaller.java
app/src/main/java/com/example/installer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/nubra/karina/: MainActivity.java  NativeInstaller.java
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/nubra/karina/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
